# nautilus-batch-rename

./: configure  configure.ac
po/: POTFILES.in
src/: nautilus-batch-rename-extension.c  nautilus-batch-rename-extension.h  nautilus-batch-rename.glade  nautilus-batch-rename.h
trunk/: AUTHORS  Makefile.in  aclocal.m4
trunk/po/: LINGUAS  pt_BR.po
trunk/src/: Makefile.am  Makefile.in  nautilus-batch-rename.c
wiki/: Screenshots.wiki
